--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body onload="setTimeout(function() {window.scrollTo(0, 1)}, 100)">
     <div class="popup">
         <div class="menu">
             <a href="#">
